--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="content">
+    <div class="content" id="content">
         <div class="header">
             <div class="header-content">
                 <img class="logo" src="./storage/Logo.png" alt="logo" />
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div class="page">
+        <div class="page" id="page">
             <div class="hero">
                 <div class="heroObj">
                     <p class="Title">We are Arctic Studio
@@ -40,11 +40,18 @@
             </div>
 
             <div class="users">
-                <p><b>1.500.000+</b> users use our services/bots?</p>
+                <p id="SETUP"><b>1500000</b>+ users use our services/bots?</p>
             </div>
 
             <div class="about" id="about">
                 <p class="AboutUsTitle">About Us</p>
+                <div class="AboutUsParagraph">
+                    <p>Hey, Welcome to our official website</p>
+                    <p>Arctic Studio was created in 2018 by two friends that met each other trough a game jam.</p>
+                    <p>Arctic Studio was originally a game development studio. We now also work on other projects such as websites, discord bots and more.</p>
+                    <p>Check out our published projects <a href="/projects">here</a>.</p>
+                    <p>Our services and bots are being used by more than 1.5 million users and is growing every day!</p>
+                </div>
             </div>
             <br>
             <br>
@@ -99,3 +106,7 @@
 </body>
 
 </html>
+
+<script src="./scripts/index.js"></script>
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
+<script src="./scripts/counter.min.js"></script>
