main page responsiveness
main page responsiveness

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="content" id="content">
         <div class="header">
             <div class="header-content">
-                <img class="logo" src="./storage/Logo.png" alt="logo" />
-                <h1 class="logoName"><a>Arctic Studio</a></h1>
+                <a href="/" class="LogoA"><img class="logo" src="./storage/Logo.png" alt="logo" />
+                <h1 class="logoName">Arctic Studio</h1></a>
                 <div class="nav">
                     <a href="/contact">CONTACT</a>
                     <a href="/support">SUPPORT US</a>
@@ -27,8 +27,7 @@
         <div class="page" id="page">
             <div class="hero">
                 <div class="heroObj">
-                    <p class="Title">We are Arctic Studio
-                    <p>
+                    <p class="Title">We are Arctic Studio</p>
                     <p class="Under">We are a developement studio</p>
                     <a href="#about"><button class="MoreButton">MORE ABOUT US</button></a>
 
@@ -39,11 +38,11 @@
                 </div>
             </div>
 
-            <div class="users">
+            <div class="users" id="about">
                 <p id="SETUP"><b>1500000</b>+ users use our services/bots?</p>
             </div>
 
-            <div class="about" id="about">
+            <div class="about">
                 <p class="AboutUsTitle">About Us</p>
                 <div class="AboutUsParagraph">
                     <p>Hey, Welcome to our official website</p>
@@ -53,54 +52,17 @@
                     <p>Our services and bots are being used by more than 1.5 million users and is growing every day!</p>
                 </div>
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+
+            <div class="footer">
+                <div class="footerIcons noSelect">
+                    <img class="invert" src="./storage/Discord.jpg" alt="Discord" />
+                    <img src="./storage/Tumblr.png" alt="Tumblr" />
+                </div>
+                <p><b>Contact:</b></p>
+                <p><b>Email</b> : info.arcticstudio[at]gmail.com response(1-4 days)</p>
+                <p><b>Discord</b> : <a href="https://discordapp.com/invite/wzF9qfC">join here</a></p>
+                <p>&copy; Arctic Studio 2020</p>
+            </div>
         </div>
     </div>
 </body>
