some mobile responsiveness
some mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="content" id="content">
-        <div class="header">
+        <div class="header noSelect">
             <div class="header-content">
                 <a href="/" class="LogoA"><img class="logo" src="./storage/Logo.png" alt="logo" />
                 <h1 class="logoName">Arctic Studio</h1></a>
@@ -39,7 +39,7 @@
             </div>
 
             <div class="users" id="about">
-                <p id="SETUP"><b>1500000</b>+ users use our services/bots?</p>
+                <p id="SETUP"><b>2000000</b>+ users use our services/bots?</p>
             </div>
 
             <div class="about">
@@ -59,8 +59,9 @@
                     <img src="./storage/Tumblr.png" alt="Tumblr" />
                 </div>
                 <p><b>Contact:</b></p>
-                <p><b>Email</b> : info.arcticstudio[at]gmail.com response(1-4 days)</p>
-                <p><b>Discord</b> : <a href="https://discordapp.com/invite/wzF9qfC">join here</a></p>
+                <p><b>Email</b> : info.arcticstudio[at]gmail.com (response 1-4 days)</p>
+                <p><b>Discord</b> : <a href="https://discordapp.com/invite/wzF9qfC">join here</a> (response 1 day)</p>
+                <p>Made by <a href="https://www.siddhart.dev">Siddhart</a></p>
                 <p>&copy; Arctic Studio 2020</p>
             </div>
         </div>
