--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="users" id="about">
-                <p id="SETUP"><b>2000000</b>+ users use our services/bots?</p>
+                <p id="SETUP"><b>2000000</b>+ users use our services/bots</p>
             </div>
 
             <div class="about">
