--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" type="text/css" href="./style/contact.css">
     <link rel="stylesheet" type="text/css" href="./style/index.css">
 </head>
 
@@ -14,7 +15,8 @@
         <div class="header noSelect">
             <div class="header-content">
                 <a href="/" class="LogoA"><img class="logo" src="./storage/Logo.png" alt="logo" />
-                <h1 class="logoName">Arctic Studio</h1></a>
+                    <h1 class="logoName">Arctic Studio</h1>
+                </a>
                 <div class="nav">
                     <a href="/contact.html">CONTACT</a>
                     <a href="/support.html">SUPPORT US</a>
@@ -25,31 +27,16 @@
         </div>
 
         <div class="page" id="page">
-            <div class="hero">
-                <div class="heroObj">
-                    <p class="Title">We are Arctic Studio</p>
-                    <p class="Under">We are a developement studio</p>
-                    <a href="#about"><button class="MoreButton">MORE ABOUT US</button></a>
-
-                    <div class="icons noSelect">
-                        <img class="invert" src="./storage/Discord.jpg" alt="Discord" />
-                        <img src="./storage/Tumblr.png" alt="Tumblr" />
-                    </div>
-                </div>
-            </div>
-
-            <div class="users" id="about">
-                <p id="SETUP"><b>2000000</b>+ users use our services/bots</p>
-            </div>
-
             <div class="about">
-                <p class="AboutUsTitle">About Us</p>
+                <p class="AboutUsTitle">Contact Us</p>
                 <div class="AboutUsParagraph">
-                    <p>Hey, Welcome to our official website</p>
-                    <p>Arctic Studio was created in 2018 by two friends that met each other through a game jam.</p>
-                    <p>Arctic Studio was originally a game development studio. We now also work on other projects such as websites, discord bots and more.</p>
-                    <p>Check out our published projects <a href="/projects">here</a>.</p>
-                    <p>Our services and bots are being used by more than 1.5 million users and is growing every day!</p>
+                    <p>If you have any quesitons for us or about our projects you can contact us via email or you can join our Discord server.</p>
+                    <p>Email : <a href="mailto:info.arcticstudio@gmail.com">info.arcticstudio@gmail.com</a></p>
+                    <p>Discord Server : <a href="https://discordapp.com/invite/wzF9qfC">join here</a></p>
+                    <br>
+                    <p>If you have any business releated quesitons you can only contact us by sending an email.</p>
+                    <p>Email : <a href="mailto:info.arcticstudio@gmail.com">info.arcticstudio@gmail.com</a></p>
+                    
                 </div>
             </div>
 
@@ -65,10 +52,6 @@
                 <p>&copy; Arctic Studio 2020</p>
             </div>
         </div>
-    </div>
 </body>
-</html>
 
-<script src="./scripts/index.js"></script>
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
-<script src="./scripts/counter.min.js"></script>
+</html>
