added example page for projects page
added example page for projects page

--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                         <p class="CARD-TITLE">Free Games Bot</p>
                         <img src="https://cdn.discordapp.com/avatars/698117737175580692/fa6bd8376bcd544b2a577d5c4074530a.png?size=128">
                         <p class="DESC">This bot will send a message in your server when a new game is free.</p>
-                        <a href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
+                        <a href="./projects/freegames.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Hermes</p>
