added data for every project page
added data for every project page

--- a/projects/acnhvillagerwiki.html
+++ b/projects/acnhvillagerwiki.html
@@ -26,11 +26,11 @@
 
         <div class="page" id="page">
             <div class="Project">
-                <p class="ProjectTitle">Free Games Bot</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698117737175580692/fa6bd8376bcd544b2a577d5c4074530a.png?size=128"/>
+                <p class="ProjectTitle">ACNH Villager Wiki</p>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/734887424852885594/462ba64838daac9b39911fcd6b77a18f.png?size=128"/>
                 <a class="Invite"><button>Invite</button></a>
                 <a class="Vote"><button>Vote</button></a>
-                <p class="ProjectDescription">The Free Games Bot is easy to setup and will automatically send a message in your server when a new game is free.</p>
+                <p class="ProjectDescription">Get information about your favourite villagers in Animal Crossing.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
                     <tr class="TableTitle">
@@ -39,36 +39,36 @@
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG help</th>
-                        <th>The bot will repond with all the commands</th>
+                        <th>ac help</th>
+                        <th>Get the all the commands</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
+                        <th>ac get NAME</th>
+                        <th>Get info about the given villager</th>
+                    </tr>
+
+                    <tr class="TableObject">
+                        <th>ac today</th>
+                        <th>Get the villagers that have their birthdays today</th>
+                    </tr>
+
+                    <tr class="TableObject">
+                        <th>ac who (month/day)</th>
+                        <th>Get the villager that has their birthday on the given date</th>
+                    </tr>
+                    
+                    <tr class="TableObject">
+                        <th>ac setup</th>
                         <th>Setup the notifications channel</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
-                        <th>Stop the bot from sending notifications</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG toggle StoreName</th>
-                        <th>Toggle the stores you want notifications from</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG role @role</th>
-                        <th>Assign a role that will be mentioned</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG get</th>
-                        <th>The bot will responds with the current free games</th>
+                        <th>ac stop</th>
+                        <th>Stop the bot from sending the notifications</th>
                     </tr>
                 </table>
-                <img class="ProjectPreviewImage" src="../storage/project_images/Free_Games_Bot_v2.png" />
+                <img class="ProjectPreviewImage" src="../storage/project_images/ACNH_Villager_Wiki.png" />
             </div>
 
             <div class="footer">
