--- a/projects/valorantwiki.html
+++ b/projects/valorantwiki.html
@@ -26,11 +26,11 @@
 
         <div class="page" id="page">
             <div class="Project">
-                <p class="ProjectTitle">Free Games Bot</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698117737175580692/fa6bd8376bcd544b2a577d5c4074530a.png?size=128"/>
+                <p class="ProjectTitle">Valorant Wiki</p>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/699922624792231936/b44a08fd477e7ea7407bd1b83c376978.png?size=128"/>
                 <a class="Invite"><button>Invite</button></a>
                 <a class="Vote"><button>Vote</button></a>
-                <p class="ProjectDescription">The Free Games Bot is easy to setup and will automatically send a message in your server when a new game is free.</p>
+                <p class="ProjectDescription">The Valorant Wiki can give you information about your favourite agents, weapons, maps and much more.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
                     <tr class="TableTitle">
@@ -39,36 +39,47 @@
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG help</th>
-                        <th>The bot will repond with all the commands</th>
+                        <th>V help</th>
+                        <th>Get all the commands</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
-                        <th>Setup the notifications channel</th>
+                        <th>V agents</th>
+                        <th>Get all the names of the agents</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
-                        <th>Stop the bot from sending notifications</th>
+                        <th>V agent {AGENT_NUMBER}</th>
+                        <th>To get more info about a agent</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG toggle StoreName</th>
-                        <th>Toggle the stores you want notifications from</th>
+                        <th>V random</th>
+                        <th>Get a random agent to play with</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG role @role</th>
-                        <th>Assign a role that will be mentioned</th>
+                        <th>V weapons</th>
+                        <th>Get all the names of the weapons</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG get</th>
-                        <th>The bot will responds with the current free games</th>
+                        <th>V weapon {WEAPON_NUMBER}</th>
+                        <th>Get more info about a weapon</th>
                     </tr>
+
+                    <tr class="TableObject">
+                        <th>V maps</th>
+                        <th>Get all the names of the maps</th>
+                    </tr>
+
+                    <tr class="TableObject">
+                        <th>V map {MAP_NUMBER}</th>
+                        <th>Get more info about a map</th>
+                    </tr>
+
                 </table>
-                <img class="ProjectPreviewImage" src="../storage/project_images/Free_Games_Bot_v2.png" />
+                <img class="ProjectPreviewImage" src="../storage/project_images/Valorant_Wiki.png" />
             </div>
 
             <div class="footer">
