--- a/projects/hermes.html
+++ b/projects/hermes.html
@@ -26,11 +26,11 @@
 
         <div class="page" id="page">
             <div class="Project">
-                <p class="ProjectTitle">Free Games Bot</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698117737175580692/fa6bd8376bcd544b2a577d5c4074530a.png?size=128"/>
+                <p class="ProjectTitle">Hermes</p>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/697812974563360768/0ea561a7f9c63b1d531453c8e248f549.png?size=128"/>
                 <a class="Invite"><button>Invite</button></a>
                 <a class="Vote"><button>Vote</button></a>
-                <p class="ProjectDescription">The Free Games Bot is easy to setup and will automatically send a message in your server when a new game is free.</p>
+                <p class="ProjectDescription">This bot will send a message everyday with a random event that happened in the past on the same day.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
                     <tr class="TableTitle">
@@ -39,36 +39,26 @@
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG help</th>
-                        <th>The bot will repond with all the commands</th>
+                        <th>HB help</th>
+                        <th>Get the all the commands</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
+                        <th>HB get</th>
+                        <th>Get a random event that happend in the past on the same day</th>
+                    </tr>
+
+                    <tr class="TableObject">
+                        <th>HB setup</th>
                         <th>Setup the notifications channel</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
+                        <th>HB stop</th>
                         <th>Stop the bot from sending notifications</th>
                     </tr>
-
-                    <tr class="TableObject">
-                        <th>FG toggle StoreName</th>
-                        <th>Toggle the stores you want notifications from</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG role @role</th>
-                        <th>Assign a role that will be mentioned</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG get</th>
-                        <th>The bot will responds with the current free games</th>
-                    </tr>
                 </table>
-                <img class="ProjectPreviewImage" src="../storage/project_images/Free_Games_Bot_v2.png" />
+                <img class="ProjectPreviewImage" src="../storage/project_images/Hermes.png" />
             </div>
 
             <div class="footer">
