--- a/projects/rocketlaunchtracker.html
+++ b/projects/rocketlaunchtracker.html
@@ -26,11 +26,11 @@
 
         <div class="page" id="page">
             <div class="Project">
-                <p class="ProjectTitle">Free Games Bot</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698117737175580692/fa6bd8376bcd544b2a577d5c4074530a.png?size=128"/>
+                <p class="ProjectTitle">Rocket Launch Tracker</p>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/697386812078817300/792962afe0808f939770af398d805aaf.png?size=128"/>
                 <a class="Invite"><button>Invite</button></a>
                 <a class="Vote"><button>Vote</button></a>
-                <p class="ProjectDescription">The Free Games Bot is easy to setup and will automatically send a message in your server when a new game is free.</p>
+                <p class="ProjectDescription">This bot will notify the users in your server when a new rocket launch is announced.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
                     <tr class="TableTitle">
@@ -39,36 +39,31 @@
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG help</th>
-                        <th>The bot will repond with all the commands</th>
+                        <th>RT help</th>
+                        <th>Get the all the commands</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
-                        <th>Setup the notifications channel</th>
+                        <th>RT track</th>
+                        <th>Get info about the recently added launch</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
-                        <th>Stop the bot from sending notifications</th>
+                        <th>RT get [number from 1 to 5]</th>
+                        <th>Get the latest added launches</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG toggle StoreName</th>
-                        <th>Toggle the stores you want notifications from</th>
+                        <th>RT start</th>
+                        <th>Setup the bot in a channel</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG role @role</th>
-                        <th>Assign a role that will be mentioned</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG get</th>
-                        <th>The bot will responds with the current free games</th>
+                        <th>RT stop</th>
+                        <th>Stop the bot from sending messages</th>
                     </tr>
                 </table>
-                <img class="ProjectPreviewImage" src="../storage/project_images/Free_Games_Bot_v2.png" />
+                <img class="ProjectPreviewImage" src="../storage/project_images/Rocket_Launch_Tracker.png" />
             </div>
 
             <div class="footer">
