--- a/projects/superherowiki.html
+++ b/projects/superherowiki.html
@@ -26,11 +26,11 @@
 
         <div class="page" id="page">
             <div class="Project">
-                <p class="ProjectTitle">Free Games Bot</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698117737175580692/fa6bd8376bcd544b2a577d5c4074530a.png?size=128"/>
+                <p class="ProjectTitle">Superhero Wiki</p>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698627966212505721/80811c8c523d7c239d1d93f4afc73bbc.png?size=128"/>
                 <a class="Invite"><button>Invite</button></a>
                 <a class="Vote"><button>Vote</button></a>
-                <p class="ProjectDescription">The Free Games Bot is easy to setup and will automatically send a message in your server when a new game is free.</p>
+                <p class="ProjectDescription">This bot will give you some information about your favorite comic superheroes.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
                     <tr class="TableTitle">
@@ -39,36 +39,17 @@
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG help</th>
-                        <th>The bot will repond with all the commands</th>
+                        <th>SW help</th>
+                        <th>Get the all the commands</th>
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
-                        <th>Setup the notifications channel</th>
+                        <th>SW get [superhero]</th>
+                        <th>Get information about your favorite superhero</th>
                     </tr>
 
-                    <tr class="TableObject">
-                        <th>FG setup</th>
-                        <th>Stop the bot from sending notifications</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG toggle StoreName</th>
-                        <th>Toggle the stores you want notifications from</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG role @role</th>
-                        <th>Assign a role that will be mentioned</th>
-                    </tr>
-
-                    <tr class="TableObject">
-                        <th>FG get</th>
-                        <th>The bot will responds with the current free games</th>
-                    </tr>
                 </table>
-                <img class="ProjectPreviewImage" src="../storage/project_images/Free_Games_Bot_v2.png" />
+                <img class="ProjectPreviewImage" src="../storage/project_images/Superhero_Wiki.png" />
             </div>
 
             <div class="footer">
