--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p>Hey, Welcome to our official website</p>
                     <p>Arctic Studio was created in 2018 by two friends that met each other through a game jam.</p>
                     <p>Arctic Studio was originally a game development studio. We now also work on other projects such as websites, discord bots and more.</p>
-                    <p>Check out our published projects <a href="/projects">here</a>.</p>
+                    <p>Check out our published projects <a href="/projects.html">here</a>.</p>
                     <p>Our services and bots are being used by more than 1.5 million users and is growing every day!</p>
                 </div>
             </div>
