--- a/projects.html
+++ b/projects.html
@@ -50,44 +50,44 @@
                         <p class="CARD-TITLE">Hermes</p>
                         <img src="https://cdn.discordapp.com/avatars/697812974563360768/0ea561a7f9c63b1d531453c8e248f549.png?size=128">
                         <p class="DESC">This bot will send a random event that happened on the same day in another year.</p>
-                        <a href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
+                        <a href="./projects/hermes.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Quote of the day</p>
                         <img src="https://cdn.discordapp.com/avatars/728687533076250674/8573b1a4b62ac33abd18333910855712.png?size=128">
                         <p class="DESC">The Quotes Bot will send a random quote in your discord server every day.</p>
-                        <a href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
+                        <a href="./projects/quoteoftheday.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">ACNH Villager Wiki</p>
                         <img src="https://cdn.discordapp.com/avatars/734887424852885594/462ba64838daac9b39911fcd6b77a18f.png?size=128">
                         <p class="DESC">Get detailed information about your favourite characters from ACNH.</p>
-                        <a href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
+                        <a href="./projects/acnhvillagerwiki.html"><p>MORE INFO</p></a>
                     </div>
 
                     <div class="CARD">
                         <p class="CARD-TITLE">Superhero Wiki</p>
                         <img src="https://cdn.discordapp.com/avatars/698627966212505721/80811c8c523d7c239d1d93f4afc73bbc.png?size=128">
                         <p class="DESC">With this bot you can get information about your favorite comic superheroes.</p>
-                        <a href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
+                        <a href="./projects/superherowiki.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Valorant Wiki</p>
                         <img src="https://cdn.discordapp.com/avatars/699922624792231936/b44a08fd477e7ea7407bd1b83c376978.png?size=128">
                         <p class="DESC">Get detailed information about the items, maps and characters from Valorant.</p>
-                        <a href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
+                        <a href="./projects/valorantwiki.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Weekly Art Jams</p>
                         <img src="https://cdn.discordapp.com/avatars/685912884437581833/431ed5628f0e51b43654007b3d1f3d2e.png?size=128">
                         <p class="DESC">The Weekly Art Jams bot will send a random theme ever Monday at 12:00 CEST.</p>
-                        <a href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
+                        <a href="./projects/weeklyartjams.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Rocket Launch Tracker</p>
                         <img src="https://cdn.discordapp.com/avatars/697386812078817300/792962afe0808f939770af398d805aaf.png?size=128">
                         <p class="DESC">Get live updates about the latest rocket lauches.</p>
-                        <a href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
+                        <a href="./projects/rocketlaunchtracker.html"><p>MORE INFO</p></a>
                     </div>
                 </div>
             </div>
