--- a/projects/acnhvillagerwiki.html
+++ b/projects/acnhvillagerwiki.html
@@ -28,8 +28,8 @@
             <div class="Project">
                 <p class="ProjectTitle">ACNH Villager Wiki</p>
                 <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/734887424852885594/462ba64838daac9b39911fcd6b77a18f.png?size=128"/>
-                <a class="Invite"><button>Invite</button></a>
-                <a class="Vote"><button>Vote</button></a>
+                <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=734887424852885594&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
+                <a class="Vote" href="https://top.gg/bot/734887424852885594/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">Get information about your favourite villagers in Animal Crossing.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
