--- a/projects/freegames.html
+++ b/projects/freegames.html
@@ -28,8 +28,8 @@
             <div class="Project">
                 <p class="ProjectTitle">Free Games Bot</p>
                 <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698117737175580692/fa6bd8376bcd544b2a577d5c4074530a.png?size=128"/>
-                <a class="Invite"><button>Invite</button></a>
-                <a class="Vote"><button>Vote</button></a>
+                <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=698117737175580692&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
+                <a class="Vote" href="https://top.gg/bot/698117737175580692/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">The Free Games Bot is easy to setup and will automatically send a message in your server when a new game is free.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
