--- a/projects/hermes.html
+++ b/projects/hermes.html
@@ -28,8 +28,8 @@
             <div class="Project">
                 <p class="ProjectTitle">Hermes</p>
                 <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/697812974563360768/0ea561a7f9c63b1d531453c8e248f549.png?size=128"/>
-                <a class="Invite"><button>Invite</button></a>
-                <a class="Vote"><button>Vote</button></a>
+                <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=697812974563360768&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
+                <a class="Vote" href="https://top.gg/bot/697812974563360768/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">This bot will send a message everyday with a random event that happened in the past on the same day.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
