--- a/projects/quoteoftheday.html
+++ b/projects/quoteoftheday.html
@@ -28,8 +28,8 @@
             <div class="Project">
                 <p class="ProjectTitle">Quote of the day</p>
                 <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/728687533076250674/8573b1a4b62ac33abd18333910855712.png?size=128"/>
-                <a class="Invite"><button>Invite</button></a>
-                <a class="Vote"><button>Vote</button></a>
+                <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=728687533076250674&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
+                <a class="Vote" href="https://top.gg/bot/728687533076250674/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">This bot will send daily quotes in your server!</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
