--- a/projects/weeklyartjams.html
+++ b/projects/weeklyartjams.html
@@ -28,8 +28,8 @@
             <div class="Project">
                 <p class="ProjectTitle">Weekly Art Jams</p>
                 <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/685912884437581833/431ed5628f0e51b43654007b3d1f3d2e.png?size=128"/>
-                <a class="Invite"><button>Invite</button></a>
-                <a class="Vote"><button>Vote</button></a>
+                <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=685912884437581833&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
+                <a class="Vote" href="https://top.gg/bot/685912884437581833/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">This bot will send a random theme every Monday at 12:00 CEST.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
