--- a/projects/rocketlaunchtracker.html
+++ b/projects/rocketlaunchtracker.html
@@ -28,8 +28,8 @@
             <div class="Project">
                 <p class="ProjectTitle">Rocket Launch Tracker</p>
                 <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/697386812078817300/792962afe0808f939770af398d805aaf.png?size=128"/>
-                <a class="Invite"><button>Invite</button></a>
-                <a class="Vote"><button>Vote</button></a>
+                <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=697386812078817300&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
+                <a class="Vote" href="https://top.gg/bot/697386812078817300/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">This bot will notify the users in your server when a new rocket launch is announced.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
