--- a/projects/superherowiki.html
+++ b/projects/superherowiki.html
@@ -28,8 +28,8 @@
             <div class="Project">
                 <p class="ProjectTitle">Superhero Wiki</p>
                 <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698627966212505721/80811c8c523d7c239d1d93f4afc73bbc.png?size=128"/>
-                <a class="Invite"><button>Invite</button></a>
-                <a class="Vote"><button>Vote</button></a>
+                <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=698627966212505721&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
+                <a class="Vote" href="https://top.gg/bot/698627966212505721/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">This bot will give you some information about your favorite comic superheroes.</p>
                 <table class="ProjectTable">
                     <p class="TableUpperTitle">Commands:</p>
