--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 
     <link rel="stylesheet" type="text/css" href="./style/index.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_data/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_data/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_data/favicon-16x16.png">
+    <link rel="manifest" href="./favicon_data/site.webmanifest">
+    <link rel="mask-icon" href="./favicon_data/safari-pinned-tab.svg" color="#000000">
+    <link rel="shortcut icon" href="./favicon_data/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Arctic Studio">
+    <meta name="application-name" content="Arctic Studio">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="./favicon_data/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -14,7 +26,8 @@
         <div class="header noSelect">
             <div class="header-content">
                 <a href="/" class="LogoA"><img class="logo" src="./storage/Logo.png" alt="logo" />
-                <h1 class="logoName">Arctic Studio</h1></a>
+                    <h1 class="logoName">Arctic Studio</h1>
+                </a>
                 <div class="nav">
                     <a href="/contact.html">CONTACT</a>
                     <a href="/support.html">SUPPORT US</a>
@@ -47,7 +60,8 @@
                 <div class="AboutUsParagraph">
                     <p>Hey, Welcome to our official website</p>
                     <p>Arctic Studio was created in 2018 by two friends that met each other through a game jam.</p>
-                    <p>Arctic Studio was originally a game development studio. We now also work on other projects such as websites, discord bots and more.</p>
+                    <p>Arctic Studio was originally a game development studio. We now also work on other projects such
+                        as websites, discord bots and more.</p>
                     <p>Check out our published projects <a href="/projects.html">here</a>.</p>
                     <p>Our services and bots are being used by more than 1.5 million users and is growing every day!</p>
                 </div>
@@ -67,6 +81,7 @@
         </div>
     </div>
 </body>
+
 </html>
 
 <script src="./scripts/index.js"></script>
