added favicon to every page
added favicon to every page

--- a/support.html
+++ b/support.html
@@ -8,6 +8,18 @@
 
     <link rel="stylesheet" type="text/css" href="./style/index.css">
     <link rel="stylesheet" type="text/css" href="./style/support.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_data/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_data/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_data/favicon-16x16.png">
+    <link rel="manifest" href="./favicon_data/site.webmanifest">
+    <link rel="mask-icon" href="./favicon_data/safari-pinned-tab.svg" color="#000000">
+    <link rel="shortcut icon" href="./favicon_data/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Arctic Studio">
+    <meta name="application-name" content="Arctic Studio">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="./favicon_data/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
