--- a/discord.html
+++ b/discord.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arctic Studio Discord Server</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_data/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_data/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_data/favicon-16x16.png">
+    <link rel="manifest" href="./favicon_data/site.webmanifest">
+    <link rel="mask-icon" href="./favicon_data/safari-pinned-tab.svg" color="#000000">
+    <link rel="shortcut icon" href="./favicon_data/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Arctic Studio">
+    <meta name="application-name" content="Arctic Studio">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="./favicon_data/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     
