added twitter cards and some seo stuff
added twitter cards and some seo stuff

--- a/ourprojects/hermes.html
+++ b/ourprojects/hermes.html
@@ -19,6 +19,23 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="../favicon_data/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:title" content="Arctic Studio - Hermes">
+    <meta property="og:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/697812974563360768/0ea561a7f9c63b1d531453c8e248f549.png?size=128">
+    <meta property="og:type" content="business.business">
+    <meta property="og:site_name" content="Arctic Studio - Hermes">
+    <meta property="og:url" content="https://www.arcticstudio.info/ourprojects/hermes.html">
+
+    <meta name="twitter:card" content="summary">
+    <meta property="twitter:title" content="Arctic Studio - Hermes">
+    <meta property="twitter:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta name="twitter:image" content="https://cdn.discordapp.com/avatars/697812974563360768/0ea561a7f9c63b1d531453c8e248f549.png?size=128">
+
+    <meta charset="UTF-8">
+    <meta name="keywords" content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, hermes">
+    <meta name="author" content="Arctic Studio - Development Studio">
+    <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 </head>
 <body>
     <div class="content" id="content">
