--- a/ourprojects/acnhvillagerwiki.html
+++ b/ourprojects/acnhvillagerwiki.html
@@ -19,6 +19,23 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="../favicon_data/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:title" content="Arctic Studio - ACNH Villager Wiki">
+    <meta property="og:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/734887424852885594/462ba64838daac9b39911fcd6b77a18f.png?size=128">
+    <meta property="og:type" content="business.business">
+    <meta property="og:site_name" content="Arctic Studio - ACNH Villager Wiki">
+    <meta property="og:url" content="https://www.arcticstudio.info/ourprojects/acnhvillagerwiki.html">
+
+    <meta name="twitter:card" content="summary">
+    <meta property="twitter:title" content="Arctic Studio - ACNH Villager Wiki">
+    <meta property="twitter:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta name="twitter:image" content="https://cdn.discordapp.com/avatars/734887424852885594/462ba64838daac9b39911fcd6b77a18f.png?size=128">
+
+    <meta charset="UTF-8">
+    <meta name="keywords" content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, ACNH Villager Wiki, Animal Crossing Discord Bot">
+    <meta name="author" content="Arctic Studio - Development Studio">
+    <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 </head>
 <body>
     <div class="content" id="content">
