--- a/ourprojects/superherowiki.html
+++ b/ourprojects/superherowiki.html
@@ -19,6 +19,23 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="../favicon_data/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:title" content="Arctic Studio - Superhero Wiki">
+    <meta property="og:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/698627966212505721/80811c8c523d7c239d1d93f4afc73bbc.png?size=128">
+    <meta property="og:type" content="business.business">
+    <meta property="og:site_name" content="Arctic Studio - Superhero Wiki">
+    <meta property="og:url" content="https://www.arcticstudio.info/ourprojects/superherowiki.html">
+
+    <meta name="twitter:card" content="summary">
+    <meta property="twitter:title" content="Arctic Studio - Superhero Wiki">
+    <meta property="twitter:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta name="twitter:image" content="https://cdn.discordapp.com/avatars/698627966212505721/80811c8c523d7c239d1d93f4afc73bbc.png?size=128">
+
+    <meta charset="UTF-8">
+    <meta name="keywords" content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, superhero wiki">
+    <meta name="author" content="Arctic Studio - Development Studio">
+    <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 </head>
 <body>
     <div class="content" id="content">
