--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,23 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-config" content="./favicon_data/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:title" content="Arctic Studio - Projects">
+    <meta property="og:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
+    <meta property="og:type" content="business.business">
+    <meta property="og:site_name" content="Arctic Studio - Projects">
+    <meta property="og:url" content="https://arcticstudio.info/ourprojects.html">
+
+    <meta name="twitter:card" content="summary">
+    <meta property="twitter:title" content="Arctic Studio - Projects">
+    <meta property="twitter:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
+
+    <meta charset="UTF-8">
+    <meta name="keywords" content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, arctic studio projects">
+    <meta name="author" content="Arctic Studio Development Studio">
+    <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 </head>
 
 <body>
