--- a/ourprojects/valorantwiki.html
+++ b/ourprojects/valorantwiki.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Arctic Studio - Valorant Wiki</title>
 
     <link rel="stylesheet" type="text/css" href="../style/index.css">
     <link rel="stylesheet" type="text/css" href="./project.css">
