added href to images
added href to images

--- a/projects.html
+++ b/projects.html
@@ -123,8 +123,8 @@
 
             <div class="footer">
                 <div class="footerIcons noSelect">
-                    <a href="https://discordapp.com/invite/wzF9qfC"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
-                    <a href="https://www.google.com"><img src="./storage/Tumblr.png" alt="Tumblr" /></a>
+                    <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
+                    <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="./storage/Tumblr.png" alt="Tumblr" /></a>
                 </div>
                 <p><b>Contact:</b></p>
                 <p><b>Email</b> : info.arcticstudio[at]gmail.com (response 1-4 days)</p>
