--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <a href="#about"><button class="MoreButton">MORE ABOUT US</button></a>
 
                     <div class="icons noSelect">
-                        <img class="invert" src="./storage/Discord.jpg" alt="Discord" />
-                        <img src="./storage/Tumblr.png" alt="Tumblr" />
+                        <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="../storage/Discord.jpg" alt="Discord" /></a>
+                        <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="../storage/Tumblr.png" alt="Tumblr" /></a>
                     </div>
                 </div>
             </div>
@@ -86,8 +86,8 @@
 
             <div class="footer">
                 <div class="footerIcons noSelect">
-                    <img class="invert" src="./storage/Discord.jpg" alt="Discord" />
-                    <img src="./storage/Tumblr.png" alt="Tumblr" />
+                    <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
+                    <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="./storage/Tumblr.png" alt="Tumblr" /></a>
                 </div>
                 <p><b>Contact:</b></p>
                 <p><b>Email</b> : info.arcticstudio[at]gmail.com (response 1-4 days)</p>
